<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/ivBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/login_header"
            android:src="@drawable/app_review" />

        <TextView
            android:id="@+id/logoutConfirmationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivBanner"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/app_review_confirmation"
            android:textColor="@color/md_grey_800"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/logoutSadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoutConfirmationText"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/app_review_detail_text"
            android:textColor="@color/md_green_800"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below="@id/logoutSadText"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/secondaryAction"
                style="@style/AppTheme.Button.Tertiary"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/cancel"
                android:textColor="@color/colorRed"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/primaryAction"
                style="@style/AppTheme.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/add_review"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>